Finshed CH09 sec

--- a/18-forkify/starter/package.json
+++ b/18-forkify/starter/package.json
@@ -1,9 +1,10 @@
 {
   "name": "starter",
   "version": "1.0.0",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Robin",
   "license": "ISC",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.13.3",
-    "parcel": "^2.13.3"
+    "parcel": "^2.13.3",
+    "svgo": "^3.3.2"
   }
 }
